section display and hidden fixed, working on spacing for input page

--- a/studio1/styles.css
+++ b/studio1/styles.css
@@ -4,12 +4,16 @@
     display: flex;
     flex-direction: row;
     gap: 120px;
-    margin: 60px 0px;
+    /* padding: 50px 0px 0px; */
     justify-content: center;
 }
 
 .hidden {
     display: none;
+}
+
+.displayForm {
+    display: block;
 }
 
 /* ----- intro ----- */
@@ -57,6 +61,8 @@ body {
 
 #input {
     gap: 300px;
+    padding-top: 60px;
+    position: relative;
 }
 
 /* body {
@@ -64,12 +70,24 @@ body {
     color: antiquewhite;
 } */
 
-form {
+#input img {
+    position: absolute;
+    top: 90%;
+    left: 15%;
+/* 
+    transform-origin: center; */
+}
+
+#input form {
     background-color: #F5F5F5;
     border-radius: 15px;
     color: #333;
     padding: 40px 40px 20px;
     width: 35%;
+
+    position: absolute;
+    top: 90%;
+    left: 45%;
 }
 
 #form1, #form2 {
@@ -79,7 +97,7 @@ form {
 h2 {
     font-size: 24px;
     font-weight: 550;
-    margin: 0px 0px 20px ;
+    margin: 0px 0px 30px ;
     text-align: center;
 }
 
@@ -106,8 +124,27 @@ input[type="text"]:focus {
 
 }
 
+#input p {
+    color: #666;
+    font-size: 0.8em;
+    align-content: center;
+    margin: auto;
+}
+
+#next {
+    background-color: #F5F5F5;
+    border: 0;
+    border-top: 1px solid #B2B2B5;
+    color: #007AFF;
+    font-weight: 600;
+    margin-top: 20px;
+    padding-top: 30px;
+    width: 100%;
+}
+
 #submit {
     background-color: #F5F5F5;
+    border: 0;
     border-top: 1px solid #B2B2B5;
     color: #007AFF;
     font-weight: 600;
@@ -117,13 +154,15 @@ input[type="text"]:focus {
 
 /* ---- outputs ----- */
 
-/* #output {
-    display: block;
-} */
+#output {
+    gap: 160px;
+    padding-top: 60px;
+}
 
 #output h1{
     font-size: 3em;
     font-weight: 600;
+    color: #333;
 }
 
 /* #phone {
@@ -142,10 +181,11 @@ input[type="text"]:focus {
 }
 
 #messages {
-    background-color: #222;
+    /* background-color: #222; */
+    border-radius: 0px 0px 40px 40px;
     overflow: scroll;
     width: 295px;
-    height: 520px;
+    height: 515px;
     position: absolute;
     bottom: 3%;
     left: 4%;
@@ -154,16 +194,16 @@ input[type="text"]:focus {
 .sender {
     background-color: #007AFF;
     border-radius: 15px;
-    margin: 0 15px 20px auto;
-    padding: 1px 15px;
+    margin: 15px 15px 20px auto;
+    padding: 10px 15px;
 }
 
 .receiver {
     background-color: #ECECEC;
     border-radius: 15px;
     color: #333;
-    margin: 0 auto 20px 15px;
-    padding: 1px 15px;
+    margin: 0px auto 20px 15px;
+    padding: 10px 15px;
     width: 60%;
 }
 
@@ -173,4 +213,12 @@ input[type="text"]:focus {
 
 .long {
     width: 60%;
+}
+
+.followup {
+    margin: 5px 10px 5px auto;
+}
+
+.last {
+    margin-bottom: 20px;
 }
